[package]
name = "aleph-dev-runtime-interfaces"
version = "0.1.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/dev-runtime-interfaces"
publish = false

[lib]
path = "lib.rs"

[dependencies]
# The fundamental dependency for defining runtime interfaces. Change its git/registry source according to your needs.
sp-runtime-interface = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false }

chrono = { version = "0.4.31", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
]
now = ["chrono"]
